--- a/php/composer.json
+++ b/php/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "mnapoli/front-yaml": "^2.0",
-        "erusev/parsedown": "^1.7",
-        "wp-cli/wp-cli-bundle": "*"
+        "erusev/parsedown": "^1.7"
     }
 }
