--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Wordpress Plugin to get Articles from a Git Repo and Publish them on Wordpress.",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"tailwind": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch"
+		"tailwind": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch",
+		"build": "python \"_dev_helpers/dist.py\""
 	},
 	"repository": {
 		"type": "git",
