--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"tailwind": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch",
 		"build": "python \"_dev_helpers/dist.py\"",
-		"start_env": "\"_dev_helpers/Scripts/activate\""
+		"extract_langs": "python \"_dev_helpers/lang.py\""
 	},
 	"repository": {
 		"type": "git",
