added package to help with git operations

--- a/php/composer.json
+++ b/php/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "mnapoli/front-yaml": "^2.0",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "czproject/git-php": "^4.1"
     }
 }
