--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
 	"name": "gitdown",
-	"version": "1.0.0",
+	"version": "1.0.5",
 	"description": "Wordpress Plugin to get Articles from a Git Repo and Publish them on Wordpress.",
 	"scripts": {
-		"watch": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify",
-		
+		"watch": "start npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify & start npx tsc -w",
 		"publish": "python \"_dev_helpers/dist.py\"",
-
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -21,8 +19,11 @@
 	},
 	"homepage": "https://github.com/Maximinodotpy/Gitdown#readme",
 	"devDependencies": {
-		"eslint": "^8.34.0",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
+		"eslint": "^8.36.0",
 		"eslint-plugin-vue": "^9.9.0",
-		"tailwindcss": "^3.2.7"
+		"tailwindcss": "^3.2.7",
+		"typescript": "^4.9.5"
 	}
 }
