--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"eslint": "^8.36.0",
 		"eslint-plugin-vue": "^9.9.0",
-		"tailwindcss": "^3.2.7"
+		"tailwindcss": "^3.2.7",
+		"typescript": "^5.0.2"
 	}
 }
