--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.5",
 	"description": "Wordpress Plugin to get Articles from a Git Repo and Publish them on Wordpress.",
 	"scripts": {
-		"watch": "start npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify",
+		"watch": "start npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify && start npx tsc",
 		"publish": "python \"_dev_helpers/dist.py\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
