--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "1.0.8",
 	"description": "Wordpress Plugin to get Articles from a Git Repo and Publish them on Wordpress.",
 	"scripts": {
-		"watch": "start npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify && start npx tsc",
+		"typescript": "npx tsc",
+		"tailwind": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify",
 		"publish": "python \"dev_helpers/publish.py\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
