--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,12 +1,12 @@
 name: Deploy to WordPress.org
-run-name: Deploy Commit "${{ github.sha }}" to WordPress.org"
+run-name: Deploy Commit "${{ github.event.head_commit.modified }}" to WordPress.org
 on:
   push:
     branches:
       - master
 jobs:
   commit:
-    name: New Commit
+    name: Deploying
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -17,17 +17,23 @@ jobs:
         pattern: '^\d*\.\d*\.\d*$'
         error: 'The commit message does not look like a version number. Please use semantic versioning (https://semver.org/).'
 
-    - name: Find and Replace
+    - name: Find and Replace Version
       uses: jacobtomlinson/gha-find-replace@v3
       with:
         find: "__MGD_VERSION__"
         replace: ${{ github.event.head_commit.message }}
         regex: false
 
-    - name: Build # Remove or modify this step as needed
+    - name: Install Dependencies
       run: |
         npm install
         composer install
+
+    # Helpers.php gets renamed to helpers.php for some reason
+    - name: Rename Helpers file
+      run: mv inc/helpers.php inc/Helpers.php
+    - name: Delete Old Helpers file
+      run: rm -f inc/helpers.php
 
     - name: WordPress Plugin Deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
