Removed some constants

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,5 @@
 name: Deploy to WordPress.org
-run-name: Deploy Commit "${{ github.event.head_commit.modified }}" to WordPress.org
+run-name: Deploy Commit "${{ github.event.head_commit.message }}" to WordPress.org
 on:
   push:
     branches:
