--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"typescript": "npx tsc",
 		"tailwind": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --watch --minify",
-		"publish": "python \"dev_helpers/publish.py\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"tailwind_build": "npx tailwindcss -i ./css/input.css -o ./css/gitdown.css --minify"
 	},
 	"repository": {
 		"type": "git",
