--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,50 +8,52 @@ jobs:
   commit:
     name: Deploying
     runs-on: ubuntu-latest
+    permissions: write-all
+
     steps:
-    - uses: actions/checkout@master
-    - id: commit-type
-      name: Check Commit Type
-      uses: gsactions/commit-message-checker@v2
-      with:
-        pattern: '^\d*\.\d*\.\d*$'
-        error: 'The commit message does not look like a version number. Please use semantic versioning (https://semver.org/).'
+      - uses: actions/checkout@master
+      - id: commit-type
+        name: Check Commit Type
+        uses: gsactions/commit-message-checker@v2
+        with:
+          pattern: '^\d*\.\d*\.\d*$'
+          error: 'The commit message does not look like a version number. Please use semantic versioning (https://semver.org/).'
 
-    - name: Find and Replace Version
-      uses: jacobtomlinson/gha-find-replace@v3
-      with:
-        find: "__MGD_VERSION__"
-        replace: ${{ github.event.head_commit.message }}
-        regex: false
+      - name: Find and Replace Version
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "__MGD_VERSION__"
+          replace: ${{ github.event.head_commit.message }}
+          regex: false
 
-    - name: Install Dependencies
-      run: |
-        npm install
-        composer install
-        npm run tailwind_build
+      - name: Install Dependencies
+        run: |
+          npm install
+          composer install
+          npm run tailwind_build
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ github.event.head_commit.message }}
-        release_name: Release ${{ github.event.head_commit.message }}
-        body: ""
-        draft: false
-        prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ github.event.head_commit.message }}
+          release_name: Release ${{ github.event.head_commit.message }}
+          body: ""
+          draft: false
+          prerelease: false
 
-    # Helpers.php gets renamed to helpers.php for some reason
-    - name: Rename Helpers file
-      run: mv inc/helpers.php inc/Helpers.php
-    - name: Delete Old Helpers file
-      run: rm -f inc/helpers.php
+      # Helpers.php gets renamed to helpers.php for some reason
+      - name: Rename Helpers file
+        run: mv inc/helpers.php inc/Helpers.php
+      - name: Delete Old Helpers file
+        run: rm -f inc/helpers.php
 
-    - name: WordPress Plugin Deploy
-      uses: 10up/action-wordpress-plugin-deploy@stable
-      env:
-        SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
-        SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
-        SLUG: gitdown # optional, remove if GitHub repo name matches SVN slug, including capitalization
-        VERSION: ${{ github.event.head_commit.message }}
+      - name: WordPress Plugin Deploy
+        uses: 10up/action-wordpress-plugin-deploy@stable
+        env:
+          SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+          SLUG: gitdown # optional, remove if GitHub repo name matches SVN slug, including capitalization
+          VERSION: ${{ github.event.head_commit.message }}
