--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,6 @@
     "compilerOptions": {
         "target": "ESNext",
 	    "watch": true,
-        "lib": ["DOM", "ES2015"]
+        "lib": ["DOM", "ES2015", "ESNext"]
     }
 }
